maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:7: error: not found: value esFaceMur
	if (esFaceMur()) {
            ^