maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
def keepHandOnSideWall() = { 
	if (!estFaceMur())
	avance()
	gauche()
	if (esFaceMur()) {
		droite()
		
	} else {
		avance()
		gauche()
		if (estFaceMur()) {
			droite()
		} else {
			avance()
			gauche()
			if (estFaceMur()) {
				droite()
			}else avance()
		}
	}
		
}

while (!estSurBiscuit()) {
	keepHandOnSideWall()
}
prendBiscuit()

}
